# VyLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
VyLib/: Containers.h  Defines.h  Exceptions.h  Pointers.h  Types.h
VyLib/FileSys/: Enviroment.h  FileSystem.h
cmake/: CommonDefs.cmake
include/: VyLib.h
include/VyLib/: Platform.h  Prerequisites.h  ThreadPool.cpp  VyLib.h
include/VyLib/Algorithms/: Hash.h  Hash.inl
include/VyLib/Assert/: Assert.h
include/VyLib/Common/: Buffer.h  Common.h  TypeTraits.h  UUID.cpp  UUID.h  Version.h
include/VyLib/Containers/: Array.h  Bitmask.h  Deque.h  List.h  Map.h  Queue.h  RingBuffer.h  Set.h  Span.h  Stack.h  Vector.h
include/VyLib/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
include/VyLib/FileSys/: File.h  FileSystem.h
include/VyLib/IO/: Streams.cpp  Streams.h
include/VyLib/Input/: Input.h  InputCodes.h
include/VyLib/Log/: Log.cpp  Log.h
include/VyLib/Math/: Math.h
include/VyLib/Memory/Allocators/: Allocator.h  BaseAllocator.h  MallocAllocator.h
include/VyLib/Pointers/: Ptrs.h
include/VyLib/Serialization/: Endianness.h
include/VyLib/Strings/: String.cpp  String.h
include/VyLib/Thread/: ThreadPool.cpp  ThreadPool.h
include/VyLib/Types/: CoreTypes.h  DefTypes.h  StringTypes.h  TimeTypes.h
include/VyLib/Utils/: ClassUtils.h  EnumUtils.h  HashUtils.h  StringUtils.h
test/: CMakeLists.txt  EntryPoint.cpp
